--- a/Styles/index.html
+++ b/Styles/index.html
@@ -7,7 +7,8 @@
 scale=1.0">
 
 <title>Implementação</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="Header.css">
 </head>
 <body>
 <header class="cabecalho">
